src/cses/apple_division/clang-tidy.txt
1 error generated.
Error while processing /Users/michael/repos/competitive-programming/src/cses/apple_division/apple_division.cpp.
/Users/michael/repos/competitive-programming/src/cses/apple_division/apple_division.cpp:3:10: error: 'algorithm' file not found [clang-diagnostic-error]
    3 | #include <algorithm>
      |          ^~~~~~~~~~~
Found compiler error(s).
